<resources>
    <string name="app_name">FoodRunner</string>
    <string name="preference_file">FoodRunner Preferences</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up"><u>Don\'t have an account? Sign up now</u></string>
    <string name="home">Home</string>
    <string name="favourites">Favourite Restaurants</string>
    <string name="profile">My Profile</string>
    <string name="faq">FAQs</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <string name="order_history">Order History</string>
    <string name="alphabetic_sort">Alphabetic Sort</string>
    <string name="rating_sort">Rating Sort</string>
    <string name="cost_sort">Price Sort</string>
</resources>